--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
-    "react-loading-skeleton": "^3.1.0"
+    "react-loading-skeleton": "^3.1.0",
+    "y": "^0.3.2"
   },
   "devDependencies": {
     "eslint": "8.25.0",
